After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761177 - [PATCH] fix build on illumos
[PATCH] fix build on illumos
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
0.17.x
Other Mac OS
: Normal critical
: ---
Assigned To: tracker-general
tracker-general
Depends on:
Blocks:
 
 
Reported: 2016-01-27 13:57 UTC by Andrew Stormont
Modified: 2016-04-02 11:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
illumos build fixes (1.37 KB, patch)
2016-01-27 13:57 UTC, Andrew Stormont
none Details | Review

Description Andrew Stormont 2016-01-27 13:57:28 UTC
Created attachment 319833 [details] [review]
illumos build fixes

The attached patch allows tracker to build on illumos.
Comment 1 Carlos Garnacho 2016-04-02 11:02:17 UTC
Thanks for the patch, the fix has been pushed to 1.8/master, will likely get backported to earlier stable versions.