Fix build on illumos.

https://bugzilla.gnome.org/show_bug.cgi?id=761177